fixed line height specs on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -382,7 +382,7 @@ body {
     line-height: 10vw; }
   .index-specialism {
     font-size: 10vw;
-    line-height: 11vw; }
+    line-height: 9vw; }
   .project-bar {
     margin-left: 2%; }
   .product-container {
