--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -53,7 +53,7 @@ $index-name-font-size-large: 10vw;
 $index-name-line-height-large: 9vw;
 
 $index-specialism-font-size-small: 10vw;
-$index-specialism-line-height-small: 11vw;
+$index-specialism-line-height-small: 9vw;
 $index-specialism-font-size-normal: 8vw;
 $index-specialism-line-height-normal: 7vw;
 $index-specialism-font-size-large: 9vw;
